# typedb

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  BAZEL_8_MACOS_BUILD_FIX.md  BUILD  BUILD_java  BZLMOD_MIGRATION_PLAN.md  CHANGELOG  CONTRIBUTING.md  Cargo.toml  Dockerfile  Grakn.java  GraknOptions.java  Graph.java  GraqlSteps.java  Hypergraph.java  Jenkinsfile  MODULE.bazel  PLAN.md  README.md  RELEASE_NOTES_LATEST.md  RELEASE_TEMPLATE.md  TypeDB.java  VERSION  WORKSPACE  WORKSPACE.bazel  all-packager.sh  assemble.bzl  build.sh  check-for-missing-checkstyle-rule.py  checkstyle.xml  console-packager.sh  debian-postinst.sh  dependencies.bzl  deployment.bzl  deployment.properties  (+26 more)
admin/: BUILD  Cargo.toml  main.rs
admin/client/: BUILD  Cargo.toml  command.rs  error.rs  lib.rs  repl.rs  transport.rs
admin/client/commands/: mod.rs  server.rs  users.rs
admin/client/transport/: unix.rs  windows.rs
admin/src/: cli.rs  lib.rs  main.rs
admin/src/commands/: mod.rs  server.rs
admin/tests/: admin_assembly.rs  binary_smoke.rs
projection/: Cargo.toml  background_refresher.rs  catalog.rs  change_detector.rs  definition.rs  lib.rs  materializer.rs  projection_store.rs  refresh_policy.rs  schema_parser.rs  type_mapping.rs
projection/pgwire/: authenticator.rs  connection.rs  listener.rs  messages.rs  mod.rs  query_executor.rs  sql_parser.rs  value_format.rs
projection/tests/: capture_pg_bytes.py  client_matrix_real_pgwire.rs  dbt_real_pgwire.rs  duckdb_real_pgwire.rs  pg_golden_bytes.json  pgwire_golden.rs  pgwire_real_postgres.rs  real_pgwire_fixture.rs
tools/dbt-typedb/: .gitignore  README.md  profiles.yml  pyproject.toml
tools/dbt-typedb/src/dbt/: __init__.py
tools/dbt-typedb/src/dbt/adapters/typedb/: __init__.py  __version__.py  connections.py  impl.py
tools/dbt-typedb/src/dbt/include/typedb/: __init__.py  dbt_project.yml  profile_template.yml
tools/dbt-typedb/tests/: test_adapter.py
workbase/: .babelrc  .eslintrc.js  .gitignore  BUILD.bazel  README.md  config.js  jsconfig.json  package-lock.json  package.json
workbase/.electron-vue/: build.js  dev-runner.js  webpack.main.config.js  webpack.renderer.config.js  webpack.web.config.js
workbase/builder/: BUILD
workbase/src/: Logger.js  index.ejs
workbase/src/main/: index.js
workbase/src/renderer/: main.js  routes.js
workbase/src/renderer/components/: EngineSettings.js  ServerSettings.js
workbase/src/renderer/components/CanvasVisualiser/: Events.js  Facade.js  Settings.js  Visualiser.js
workbase/src/renderer/components/DataManagement/: CanvasToolTip.vue  CommandsModal.vue  DataManagementContent.vue  DataManagementStore.js  DataManagementUtils.js  FavQueriesSettings.js  NodePanel.vue  Style.js  VisualiserGraphBuilder.js
workbase/src/renderer/components/DataManagement/DataManagementContent/: BottomBar.vue  CommandsModal.vue  ContextMenu.vue  DataManagementContent.vue  (+5 more)
workbase/src/renderer/components/Login/: LoginPage.vue
workbase/src/renderer/components/MainTemplate/: Appbar.vue  EpicsBar.vue  MainTemplate.vue
workbase/src/renderer/components/ManageKeyspaces/: CreateKeyspaceCard.vue  ImportCard.vue  KeyspacesPage.vue
workbase/src/renderer/components/ManageSettings/: SettingsPage.vue
workbase/src/renderer/components/SchemaDesign/: ContextMenu.vue  GraphCanvas.vue  KeyspacesHandler.vue  LeftBar.vue  ManageSchemaConcepts.vue  RightBar.vue  SchemaCanvasEventsHandler.js  SchemaDesignContent.vue  SchemaDesignStore.js  SchemaHandler.js  SchemaUtils.js  Style.js  TopBar.vue
workbase/src/renderer/components/UIElements/: CaretIcon.vue  LoadingButton.vue  LoadingButton2.vue  PlusMinus.vue  Spinner.vue  ToolTip.vue  VueButton.vue  VueContextMenu.vue  VueIcon.vue  VueInput.vue  VueMenu.vue  VueMenuDivider.vue  VueMenuItem.vue  VueNavbar.vue  VuePopover.vue  VueRadio.vue  VueSwitch.vue  VueTab.vue  VueTable.vue  VueTabs.vue  VueToolTip.vue
workbase/src/renderer/components/Visualiser/: BottomBar.vue  CanvasToolTip.vue  ConnectionManager.vue  ContextMenu.vue  ContextMenuUtils.js  DataManagementStore.js  DataManagementUtils.js  Footer.vue  GraknFooter.vue  KeyspaceHandler.vue  KeyspaceManager.vue  LeftBar.vue  Preferences.vue  RightBar.vue  Style.js  TopBar.vue  VisTab.vue  VisualiserCanvasEventsHandler.js  VisualiserContent.vue  VisualiserFooter.vue  VisualiserGraphBuilder.js  VisualiserStore.js  VisualiserUtils.js
workbase/src/renderer/components/shared/: CanvasStoreMixin.js  GraphCanvas.vue  KeyspacesHandler.vue  PanelContainer.vue  PersistentStorage.js  Preferences.vue  SharedUtils.js  StoresActions.js
workbase/src/renderer/components/visualiser/: Facade.js
workbase/src/renderer/customPlugins/: index.js  notifications.js
workbase/src/renderer/store/: actions.js  getters.js  index.js
workbase/src/renderer/store/modules/: settings.js
workbase/static/styles/: blueprint-icons.css  blueprint.css  codemirror.css  dracula.css  fonts.css  prism.css  style.css
workbase/static/webfonts/: fa-brands-400.eot  fa-regular-400.eot  fa-solid-900.eot
workbase/styles/: _buttons.scss  _reset.scss  style.scss
workbase/test/: .eslintrc.js
workbase/test/e2e/: ContextMenu.test.js  DoubleClick.test.js  FavQueries.test.js  LoadNeighbours.test.js  QuerySettings.test.js  RelationshipsPanel.test.js  TypesPanel.test.js  VisualiserFooter.test.js  keyspaces.test.js
workbase/test/helpers/: MockConcepts.js
workbase/test/unit/: EngineSettings.test.js  VisualiserFacade.test.js
workbase/test/unit/components/DataManagement/: DataManagementStore.test.js  DataManagementUtils.test.js  NodePanel.test.js  NodeSettings.test.js  QuerySettings.test.js  VisualiserGraphBuilder.test.js
workbase/test/unit/components/ScehmaDesign/: SchemaHandler.test.js  SchemaUtils.test.js
workbase/test/unit/components/Visualiser/: DataManagementStore.test.js  NodePanel.test.js  VisualiserGraphBuilder.test.js  VisualiserUtils.test.js  performance.test.js  visTab.test.js
workbase/test/unit/components/store/: actions.test.js
workbase/wrappers-bazel/: BUILD  npm_run_build.sh  npm_test.sh
(+15240 files in other folders)
