# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

module(
    name = "typedb",
    version = "0.0.0",
    compatibility_level = 1,
)

# ===========================================================
# Common
# ===========================================================

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# ===========================================================
# Languages & toolchains
# ===========================================================

# Rust rules need typedb_dependencies for patching
bazel_dep(name = "rules_rust", version = "0.56.0")
# Backport a bug fix from rules_rust 0.58 (bazelbuild/rules_rust#3251)
git_override(
    module_name = "rules_rust",
    remote = "https://github.com/bazelbuild/rules_rust",
    tag = "0.56.0",
    patches = ["@@typedb_dependencies+//patches:rules_rust.patch"],
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.0"],
    extra_target_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
    ],
    rustfmt_version = "nightly/2026-04-15",
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(version = "1.93.0")

# Kotlin
bazel_dep(name = "rules_kotlin", version = "2.0.0")
register_toolchains("@rules_kotlin//kotlin/internal:default_toolchain")

# Python
bazel_dep(name = "rules_python", version = "1.0.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(is_default = True, python_version = "3.11", ignore_root_user_error = True)

# Java
bazel_dep(name = "rules_java", version = "8.6.2")

# ===========================================================
# Protobuf & gRPC
# ===========================================================

bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")

# ===========================================================
# Package managers
# ===========================================================

# Maven
bazel_dep(name = "rules_jvm_external", version = "6.6")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
use_repo(maven, "maven")

# Rust crates
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
use_repo(crate, "crates")

# ===========================================================
# Assembly / distribution
# ===========================================================

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.2.7")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "typedb-ubuntu-x86_64",
    image = "index.docker.io/typedb/ubuntu",
    tag = "3.1.0-amd64",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "typedb-ubuntu-arm64",
    image = "index.docker.io/typedb/ubuntu",
    tag = "3.1.0-arm64",
    platforms = ["linux/arm64"],
)
use_repo(oci, "typedb-ubuntu-x86_64", "typedb-ubuntu-x86_64_linux_amd64", "typedb-ubuntu-arm64", "typedb-ubuntu-arm64_linux_arm64")

workspace_refs = use_repo_rule("@typedb_bazel_distribution//common/workspace_refs:rules.bzl", "_workspace_refs")
workspace_refs(
    name = "typedb_workspace_refs",
    workspace_commit_dict = {
        "typeql+": "a1fae91ebd68ed2d7b2eb5035c1287c3bc66789b",
        "typedb_protocol+": "25ab3fb02715062bd036f8b83908de92b106a202",
    },
    workspace_tag_dict = {
    },
)

# TypeDB Console artifact
native_artifact_files = use_extension("@typedb_dependencies//distribution/artifact:rules.bzl", "native_artifact_files")
native_artifact_files.artifact(
    name = "typedb_console_artifact",
    group_name = "typedb-console-{platform}",
    artifact_name = "typedb-console-{platform}-{version}.{ext}",
    tag = "3.10.0-alpha-1",
)
use_repo(
    native_artifact_files,
     "typedb_console_artifact_linux-x86_64",
     "typedb_console_artifact_linux-arm64",
     "typedb_console_artifact_mac-x86_64",
     "typedb_console_artifact_mac-arm64",
     "typedb_console_artifact_windows-x86_64",
)

# ===========================================================
# TypeDB repos
# ===========================================================

bazel_dep(name = "typedb_bazel_distribution", version = "0.0.0")
git_override(
    module_name = "typedb_bazel_distribution",
    remote = "https://github.com/typedb/bazel-distribution",
    commit = "6c81a5180ed94a11c989e06a4ff8215df6da163e",
)

bazel_dep(name = "typedb_dependencies", version = "0.0.0")
git_override(
    module_name = "typedb_dependencies",
    remote = "https://github.com/typedb/dependencies",
    commit = "48ef6e41f9f0deadc0d59bb0e9d4a58efd0099af",
)

bazel_dep(name = "typeql", version = "0.0.0")
git_override(
    module_name = "typeql",
    remote = "https://github.com/typedb/typeql",
    commit = "a1fae91ebd68ed2d7b2eb5035c1287c3bc66789b",
)

bazel_dep(name = "typedb_protocol", version = "0.0.0")
git_override(
    module_name = "typedb_protocol",
    remote = "https://github.com/typedb/typedb-protocol",
    commit = "25ab3fb02715062bd036f8b83908de92b106a202",
)

bazel_dep(name = "typedb_behaviour", version = "0.0.0")
git_override(
    module_name = "typedb_behaviour",
    remote = "https://github.com/krishnangovindraj/typedb-behaviour",
    commit = "0148d83a3a0b06ee21c39f20f0d1772a46d67325",
)
