# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

# This file intentionally left empty.
# It serves as a workspace root marker for Bazelisk.
# All dependency management is done via MODULE.bazel (Bzlmod).
