[package]
	name = "projection"
	edition = "2021"
	version = "0.0.0"

[lib]
	path = "lib.rs"

[dependencies]

	[dependencies.encoding]
		path = "../encoding"
		features = []
		default-features = false

	[dependencies.sqlparser]
		version = "0.61.0"
		default-features = false

	[dependencies.tokio]
		version = "1.47.1"
		features = ["io-util", "net", "rt", "macros", "sync"]
		default-features = false

[dev-dependencies]

	[dev-dependencies.chrono]
		version = "0.4.41"
		default-features = false
		features = ["std"]

	[dev-dependencies.chrono-tz]
		version = "0.9.0"
		default-features = false

	[dev-dependencies.tokio]
		version = "1.47.1"
		features = ["io-util", "net", "rt", "rt-multi-thread", "macros", "sync", "test-util"]
		default-features = false
