[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-typedb"
version = "0.1.0"
description = "Read-only dbt adapter for TypeDB's pgwire compatibility layer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dbt-postgres>=1.8,<2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"dbt.include.typedb" = ["*.yml"]